--- a/.github/workflows/evergreen.yml
+++ b/.github/workflows/evergreen.yml
@@ -14,18 +14,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Generate a token
+        id: generate-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ vars.GH_APP_ID }}
+          private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+
       - name: Run evergreen action for tools
         uses: github/evergreen@v1
         env:
-          GH_APP_ID: ${{ secrets.GH_APP_ID }}
-          GH_APP_INSTALLATION_ID: ${{ secrets.GH_APP_INSTALLATION_ID }}
-          GH_APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
-          # GITHUB_APP_ENTERPRISE_ONLY: True --> Set to true when created GHE App needs to communicate with GHE api
-          GH_ENTERPRISE_URL: ${{ github.server_url }}
-          # GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} --> the token input is not used if the github app inputs are set
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
           ORGANIZATION: v1vhm
-          UPDATE_EXISTING: True
-          GROUP_DEPENDENCIES: True
 
       - name: Post evergreen job summary
         run: cat summary.md >> $GITHUB_STEP_SUMMARY
