--- a/.github/workflows/evergreen.yml
+++ b/.github/workflows/evergreen.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           app-id: ${{ vars.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          owner: v1vhm
 
       - name: Run evergreen action for tools
         uses: github/evergreen@v1
