--- a/.github/workflows/evergreen.yml
+++ b/.github/workflows/evergreen.yml
@@ -18,7 +18,7 @@ jobs:
         id: generate-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ vars.GH_APP_ID }}
+          app-id: ${{ secrets.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
           owner: v1vhm
 
